--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.11",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.5.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
+    "highcharts": "^12.4.0",
+    "highcharts-react-official": "^3.2.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.10.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
