--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "date-fns": "^4.1.0",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.3",
+    "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
@@ -26,6 +28,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.10.0",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.4.0",
     "react-router-dom": "^7.9.4",
     "xlsx": "^0.18.5"
   },
