--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +19,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mysql2": "^3.15.2"
+    "mysql2": "^3.15.2",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
