--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mailtrap": "^4.4.0",
     "mysql2": "^3.15.2",
+    "nodemailer": "^7.0.11",
     "stripe": "^20.0.0"
   },
   "devDependencies": {
