Feat: enhance currency, margin, AI, payment management and add more errors displaying

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,14 @@ package-lock.json
 
 ###
 UML/
+
+
+# Playwright
+# node_modules/
+# /test-results/
+# /playwright-report/
+# /blob-report/
+# /playwright/.cache/
+# /playwright/.auth/
+
+tests/
